# hft-trading-system

./: .clang-format  .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  requirements.txt
.claude/: ZERO_OVERHEAD_REFACTOR.md
.githooks/: pre-commit
.github/workflows/: build-test.yml  codecov.yml  docker-build.yml  lint.yml
benchmarks/: PERF_ANALYSIS_ORDER_FLOW.md  bench_lockfree.cpp  bench_metrics_comparison.cpp  bench_order_book_metrics.cpp  bench_order_flow_metrics.cpp  bench_orderbook.cpp  bench_regime.cpp  bench_simd.cpp  bench_trade_stream_full.cpp  bench_trade_stream_metrics.cpp
cmake/: coverage.cmake  coverage_excludes.list  coverage_filter.sh
docker/: Dockerfile
docs/: AI_TUNER_ARCHITECTURE.md  TUNER_ARCHITECTURE.md  UNIFIED_STRATEGY_ARCHITECTURE.md
docs/architecture/: README.md  class-diagram.puml  deployment-diagram.puml  sequence-diagrams.puml
docs/performance/: trade_stream_metrics_perf_report.md
examples/: backtest_demo.cpp  backtest_real_data.cpp
fpga/: README.md
fpga/rtl/: hft_top.v  matching_engine.v  orderbook.v
fpga/tb/: orderbook_tb.v
include/: backtester.hpp  book_side.hpp  concepts.hpp  feed_handler.hpp  hft_c_api.h  itch_messages.hpp  market_data_handler.hpp  market_data_handler_v2.hpp  market_data_service.hpp  market_events.hpp  matching_engine.hpp  mock_order_sender.hpp  order_pool.hpp  order_sender.hpp  orderbook.hpp  symbol_config.hpp  symbol_world.hpp  top_of_book.hpp  trading_engine.hpp  trading_simulator.hpp  types.hpp
include/account/: account.hpp
include/backtest/: kline_backtest.hpp  strategies.hpp  strategy_adapter.hpp
include/benchmark/: histogram.hpp  timer.hpp
include/config/: defaults.hpp  shared_config.hpp  strategy_config.hpp  strategy_factory.hpp
include/core/: event_bus.hpp  events.hpp  futures_evaluator.hpp  metrics_manager.hpp  strategy_evaluator.hpp
include/exchange/: binance_client.hpp  binance_futures_rest.hpp  binance_futures_ws.hpp  binance_order_sender.hpp  binance_rest.hpp  binance_ws.hpp  futures_market_data.hpp  iexchange.hpp  market_data.hpp  ouch_order_sender.hpp  paper_exchange.hpp  paper_exchange_adapter.hpp  production_order_sender.hpp
include/execution/: execution_engine.hpp  execution_pipeline.hpp  execution_scorer.hpp  execution_stage.hpp  funding_scheduler.hpp  futures_position.hpp  limit_manager.hpp  order_request.hpp  spot_limit_stage.hpp  spot_market_stage.hpp  trading_engine.hpp
include/feed/: binance_feed_handler.hpp  itch_feed_handler.hpp
include/ipc/: event_publisher.hpp  execution_report.hpp  shared_config.hpp  shared_event_log.hpp  shared_ledger.hpp  shared_metrics_snapshot.hpp  shared_paper_config.hpp  shared_portfolio_state.hpp  shared_ring_buffer.hpp  shared_tuner_state.hpp  symbol_config.hpp  trade_event.hpp  tuner_event.hpp  udp_telemetry.hpp
include/logging/: async_logger.hpp
include/metrics/: combined_metrics.hpp  futures_metrics.hpp  order_book_metrics.hpp  order_flow_metrics.hpp  trade_stream_metrics.hpp
include/network/: packet_buffer.hpp  udp_receiver.hpp
include/ouch/: ouch_messages.hpp  ouch_session.hpp
include/paper/: live_dashboard.hpp  paper_order_sender.hpp  paper_trading_engine.hpp  queue_fill_detector.hpp
include/risk/: enhanced_risk_manager.hpp
include/security/: rate_limiter.hpp
include/simd/: simd_avx2.hpp  simd_avx512.hpp  simd_config.hpp  simd_guard.hpp  simd_ops.hpp  simd_scalar.hpp  simd_sse2.hpp
include/strategy/: adaptive_strategy.hpp  config_strategy.hpp  enhanced_risk_manager.hpp  fair_value.hpp  fair_value_strategy.hpp  halt_manager.hpp  istrategy.hpp  market_health_monitor.hpp  market_maker.hpp  market_maker_strategy.hpp  metrics_context.hpp  metrics_driven_strategy.hpp  momentum.hpp  momentum_strategy.hpp  order_flow_imbalance.hpp  overfitted_strategy.hpp  vwap.hpp  (+19 more)
knowledge/: adaptive_trading_config.md  crypto_market_characteristics.md  market_microstructure.md  market_regimes.md  order_execution.md  parameter_tuning.md  risk_management.md  strategy_overview.md  trading_config_parameters.md  trading_strategies_encyclopedia.md
rag_service/: rag_server.py  requirements.txt
rust/: Cargo.toml
rust/src/: ffi.rs  lib.rs  matching_engine.rs  orderbook.rs  types.rs
scripts/: 8h_test.sh  8hour_test_monitor.sh  README.md  binance_testnet_bot.py  check_hardcoded.sh  check_status.sh  download_binance_data.py  hourly_report.sh  paper-trading.sh  run_6h_test.sh  run_coverage.sh  simple_tracker.sh  track_progress.sh
tasks/: BUG-001-web-api-equity-calculation.md  IMPROVE-001-claude-api-timeout-handling.md  NOTE-001-wsl2-limitations.md  TUNE-001-config-strategy-win-rate.md
tests/: test_account.cpp  test_action_event_wiring.cpp  test_all_strategies.cpp  test_arbitrage.cpp  test_backtester  test_backtester.cpp  test_binance_futures_rest.cpp  test_binance_futures_ws.cpp  test_binance_ws_depth.cpp  test_book_side.cpp  test_cancel_fault_tolerance.cpp  test_claude_client_parser.cpp  test_combined_metrics.cpp  test_commission_scaling.cpp  test_concepts.cpp  test_config_strategy.cpp  test_end_to_end_integration.cpp  test_enhanced_risk.cpp  test_error_events.cpp  test_event_bus.cpp  test_execution_engine.cpp  test_execution_overselling.cpp  test_execution_pipeline.cpp  test_execution_scorer.cpp  test_execution_scorer_edge_cases.cpp  test_execution_scorer_integration.cpp  test_exit_path_guards.cpp  test_feed_handler  test_feed_handler.cpp  test_fractional_quantity.cpp  test_funding_scheduler.cpp  test_futures_evaluator.cpp  test_futures_market_data.cpp  test_futures_metrics.cpp  test_futures_position.cpp  test_halt.cpp  test_halt_manager.cpp  test_hot_path.cpp  test_integration  test_integration.cpp  (+70 more)
tools/: dump_portfolio.cpp  fetch_klines.cpp  hft.cpp  hft_control.cpp  hft_dashboard.cpp  hft_demo.cpp  hft_observer.cpp  live_demo.cpp  optimize_strategies.cpp  paper_trading_demo.cpp  run_backtest.cpp  trader.cpp  trader_control.cpp  trader_dashboard.cpp  trader_events.cpp  trader_observer.cpp  trader_telemetry_collector.cpp  trader_tuner.cpp  trader_web_api.cpp  ws_test.cpp
web/: index.html
(+27 files in other folders)
