[package]
name = "hft_rust"
version = "0.1.0"
edition = "2021"
authors = ["Orhan"]
description = "High-Frequency Trading library in Rust"

[lib]
name = "hft_rust"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bench_orderbook"
path = "src/bin/bench_orderbook.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
